tests/errors/se_badindent2.pyx
def f():
	a = b
		c = d
_ERRORS = u"""
3:0: Possible inconsistent indentation
3:0: Expected an identifier or literal
"""
